--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,12 +3,22 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'users/info', user: current_user %>
+
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @books %>
-    </div>
+      <%= render 'form', book: @book %>
+</div>
+
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
-      <%= render 'index', books: @books%>
+      <%= render 'books/index', books: @books %>
     </div>
   </div>
 </div>
+  <% if @book.errors.any? %>
+<div id="error_explanation">
+  <%=pluralize(@book.errors.count,"error" )%> prohibited this book from being saved.:
+  <% @book.errors.full_messages.each do |message| %>
+   <%= message %>
+    <% end %>
+    <% end %>
+    </div>
