--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,7 +11,7 @@
       <tr>
         <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
-        <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
+        <td><%= link_to 'Show', user_path(user.id), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
   </tbody>
