--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,11 @@
         </td>
         <td><%= link_to book.title, book_path(book.id), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+
+
+        <td><%= link_to "#{book.post_comments.count} コメント", book_path(book.id) %></td>
+
+
       </tr>
     <% end %>
   </tbody>
