--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,6 +22,24 @@
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
         </tr><% end %>
       </table>
+
+      <div class="comments">
+<p>コメント件数：<%= @book.post_comments.count %></p>
+<% @book.post_comments.each do |post_comment| %>
+  <p><%= attachment_image_tag(@book.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></p>
+  <%= post_comment.user.name %>
+  <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+<% end %>
+</div>
+<div class="new-comment">
+<%= form_with(model:[@book, @post_comment], local: true) do |f| %>
+  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+  <%= f.submit "送信する" %>
+<% end %>
+</div>
+
+
+
     </div>
   </div>
 </div>
