--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,27 +17,52 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
+          <td><% if @book.favorited_by?(current_user) %>
+    <p>
+      <%= link_to book_favorites_path(@book), method: :delete do %>
+        ♥<%= @book.favorites.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to book_favorites_path(@book), method: :post do %>
+        ♡<%= @book.favorites.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
+
+
+
+          </td>
+
+
+          <td><p>コメント件数：<%= @book.post_comments.count %></p></td>
+
           <% if @book.user == current_user %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
         </tr><% end %>
       </table>
-
       <div class="comments">
-<p>コメント件数：<%= @book.post_comments.count %></p>
 <% @book.post_comments.each do |post_comment| %>
+<%= link_to user_path(@book.user) do %>
   <p><%= attachment_image_tag(@book.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></p>
-  <%= post_comment.user.name %>
-  <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+  <%= post_comment.user.name %><% end %>
+  <!--%= post_comment.created_at.strftime('%Y/%m/%d') %>-->
+  <%= post_comment.comment %>
+  <% if post_comment.user == current_user %>
+    <%= link_to "削除", book_post_comment_path(post_comment.book, post_comment), method: :delete, class: "btn btn-sm btn-danger destroy_book_#{@book.id}" %>
+  <% end %>
+
+
 <% end %>
 </div>
-<div class="new-comment">
+<div>
 <%= form_with(model:[@book, @post_comment], local: true) do |f| %>
-  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+  <%= f.text_area :comment, rows:'5',placeholder: "", class: 'form-control book_post_comment' %>
   <%= f.submit "送信する" %>
 <% end %>
 </div>
-
 
 
     </div>
