--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -45,8 +45,8 @@
       </table>
       <div class="comments">
 <% @book.post_comments.each do |post_comment| %>
-<%= link_to user_path(@book.user) do %>
-  <p><%= attachment_image_tag(@book.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></p>
+<%= link_to user_path(post_comment.user) do %>
+  <p><%= attachment_image_tag(post_comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></p>
   <%= post_comment.user.name %><% end %>
   <!--%= post_comment.created_at.strftime('%Y/%m/%d') %>-->
   <%= post_comment.comment %>
