--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -9,8 +9,15 @@
   <tbody>
     <% users.each do |user| %>
       <tr>
-        <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
+        <td><%= attachment_image_tag(user, :profile_image, :fill, 60, 60, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
+        <td>フォロー数: <%= user.followings.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
+        <td> <% if current_user.following?(user) %>
+  <%= link_to "Unfollow", user_relationships_path(user.id), method: :delete %>
+<% else %>
+  <%= link_to "Follow", user_relationships_path(user.id), method: :post %>
+<% end %></td>
         <td><%= link_to 'Show', user_path(user.id), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
