--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,13 +8,34 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+  <th>follows</th>
+  <th>
+    <%= link_to user_followings_path(user) do %>
+    <%= user.followings.count %>
+    <% end %>
+    </th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th>
+      <%= link_to user_followers_path(user) do %>
+      <%= user.followers.count %>
+      <% end %>
+      </th>
+    </tr>
 </table>
 
 <div class='row'>
 
-
-
+    <% if current_user != user %>
+<% if current_user.following?(user) %>
+  <%= link_to "Unfollow", user_relationships_path(user.id), method: :delete, class: "btn btn-sm btn-success" %>
+<% else %>
+  <%= link_to "Follow", user_relationships_path(user.id), method: :post, class: "btn btn-sm btn-success" %>
+<% end %>
 
 
   <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  <% end %>
 </div>
