--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,6 +1,5 @@
+  <h2>Books</h2>
 <table class='table table-hover table-inverse'>
-  <%= render 'searchs/form' %>
-
   <thead>
     <tr>
       <th></th>
