--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <div class='container px-5 px-sm-0'>
+   <div class='col-md-8 offset-md-1'>
+   <%= render 'searchs/form' %>
+    </div>
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
@@ -7,7 +10,6 @@
       <%= render 'books/form', book: @book %>
     </div>
     <div class='col-md-8 offset-md-1'>
-      <h2>Books</h2>
       <%= render 'books/index',books: @books %>
     </div>
   </div>
