--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+<div class='col-md-8 offset-md-1'>  <%= render 'searchs/form' %></div>
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
@@ -9,7 +10,6 @@
       <%= render 'books/form', book: @book %>
 </div>
     <div class='col-md-8 offset-md-1'>
-       <%= render 'searchs/form' %>
       <%= render 'books/index', books: @books %>
     </div>
   </div>
