--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<div class='col-md-8 offset-md-1'>  <%= render 'searchs/form' %></div>
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-3'>
