--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
+<div class='col-md-8 offset-md-1'>  <%= render 'searchs/form' %></div>
 <div class='container px-5 px-sm-0'>
    <div class='col-md-8 offset-md-1'>
-   <%= render 'searchs/form' %>
     </div>
   <div class='row'>
     <div class='col-md-3'>
