--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,8 +9,8 @@
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
-  		<table class='table'>
-  		  <tr>
+  		<table class="table">
+  		  <tr id="book_<%= @book.id %>">
   		    <td><%= link_to user_path(@book.user) do %>
             <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
             <%= @book.user.name %>
@@ -18,34 +18,23 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          <td>
+          <td class="favorite-btn">
             <%= render 'favorites/favorite-btn' , book: @book %>
           </td>
 
 
-          <td><p>コメント件数：<%= @book.post_comments.count %></p></td>
+          <td class="comments-count"><p>コメント件数：<%= @book.post_comments.count %></p></td>
 
           <% if @book.user == current_user %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
         </tr><% end %>
       </table>
-      <div class="comments">
-<% @book.post_comments.each do |post_comment| %>
-<%= link_to user_path(post_comment.user) do %>
-  <p><%= attachment_image_tag(post_comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></p>
-  <%= post_comment.user.name %><% end %>
-  <!--%= post_comment.created_at.strftime('%Y/%m/%d') %>-->
-  <%= post_comment.comment %>
-  <% if post_comment.user == current_user %>
-    <%= link_to "削除", book_post_comment_path(post_comment.book, post_comment), method: :delete, class: "btn btn-sm btn-danger destroy_book_#{@book.id}" %>
-  <% end %>
-
-
-<% end %>
-</div>
-<div>
-<%= form_with(model:[@book, @comment], local: true) do |f| %>
+      <table class="post_comments">
+　　　<%= render 'post_comments/index' , book: @book %>
+      </table>
+      <div>
+<%= form_with model:[@book, @comment] do |f| %>
   <%= f.text_area :comment, rows:'5',placeholder: "", class: 'form-control book_post_comment' %>
   <%= f.submit "送信する" %>
 <% end %>
