--- a/app/views/post_comments/_index.html.erb
+++ b/app/views/post_comments/_index.html.erb
@@ -1,12 +1,14 @@
-<div class="comments">
-<% @book.post_comments.each do |post_comment| %>
+<% book.post_comments.each do |post_comment| %>
+<tr>
+  <td>
 <%= link_to user_path(post_comment.user) do %>
-  <p><%= attachment_image_tag(post_comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></p>
+  <%= attachment_image_tag(post_comment.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %><br>
   <%= post_comment.user.name %><% end %>
+  </td>
   <!--%= post_comment.created_at.strftime('%Y/%m/%d') %>-->
-  <%= post_comment.comment %>
+  <td><%= post_comment.comment %></td>
   <% if post_comment.user == current_user %>
-    <%= link_to "削除", book_post_comment_path(post_comment.book, post_comment), method: :delete, class: "btn btn-sm btn-danger destroy_book_#{@book.id}" %>
-  <% end %>
+    <td><%= link_to "削除", book_post_comment_path(post_comment.book_id, post_comment.id), method: :delete, class: "btn btn-sm btn-danger", remote: true %>
+  </td><% end %></tr>
 <% end %>
-</div>
+</tr>
